--- a/klad.html
+++ b/klad.html
@@ -1,5 +1,5 @@
 <!-- een nutteloos bestand voor de applicatie.
-Dit gebruikte ik om de views in html te schrijven voor aleer ik er pugs ban maakte
+Dit gebruikte ik om de views in html te schrijven voor aleer ik er pugs van maakte
 -->
 
 
@@ -10,14 +10,22 @@ Dit gebruikte ik om de views in html te schrijven voor aleer ik er pugs ban maak
     <title>test</title>
 </head>
 <body>
-    <h1>login</h1>
+    <h1>registratie</h1>
     <form action="" method="post">
-        <input type="text" name="username" id="username" placeholder="username">
+        <input type="text" name="firstname" id="firstname" placeholder="firstname">
         <br>
-        <input type="password" name="password" id="password" placeholder="password">
+        <input type="text" name="lastname" id="lastname" placeholder="lastname">
+        <br>
+        <input type="text" name="email" id="email" placeholder="email">
+        <br>
+        <input type="password" name="password1" id="password1" placeholder="password">
+        <br>
+        <input type="password" name="password2" id="password2" placeholder="bevestig password">
+        <br>
+        <button>registreer</button>
     </form>
     
-    <h3>Nog geen account?</h3>
-    <a href="signin">sign in</a>
+    <h3>Heeft u al een account?</h3>
+    <a href="login">login</a>
 </body>
 </html>
